# aio-scrapy

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
aioscrapy/: __init__.py  __main__.py  cmdline.py  crawler.py  exceptions.py  link.py  logformatter.py  process.py  serializer.py  signalmanager.py  signals.py  spiderloader.py  statscollectors.py
aioscrapy/commands/: __init__.py  crawl.py  genspider.py  list.py  runspider.py  settings.py  startproject.py  version.py
aioscrapy/connection/: __init__.py  _aiomysql.py  _aioredis.py  _aiormysql.py
aioscrapy/core/: engine.py  scheduler.py  scraper.py
aioscrapy/db/: __init__.py  _aiomysql.py  _aiorabbitmq.py  _aioredis.py  abcmanager.py  absmanager.py  aiomongo.py  aiomysql.py  aiopg.py  aiorabbitmq.py  aioredis.py  interface.py
aioscrapy/downloadermiddlewares/: retry.py  ssl_ciphers.py
doc/: README_ZH.md  documentation.md  documentation_zh.md
docs/: api.md  concepts.md  databases.md  distributed.md  downloaders.md  dupefilters.md  index.md  installation.md  middlewares.md  pipelines.md  proxy.md  queues.md  quickstart.md  settings.md  spiders.md
example/: baidu3Spider.py  baiduSpider.py  run.py
tests/: _fake_redis_queue.py  test_database_pipelines.py  test_downloader_options.py  test_engine_lifecycle.py  test_engine_wakeup.py  test_logging_context.py  test_package.py  test_pipeline_cache.py  test_priority_queues.py  test_reliable_dupefilter.py  test_reliable_queue.py  test_task_lifecycle.py  test_write_error_policy.py
(+200 files in other folders)
